--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules
 # testing
 /coverage
 # production
-/build
+build
 # misc
 .DS_Store
 .env.local
@@ -15,4 +15,3 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
